--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -6,6 +6,7 @@
  riyadunic:0 "Riyadunic"
  altaqadimi:0 "Altaqadimi"
  antawilian:0 "Antawilian"
+ ardwajdi:0 "Ardwajdi"
 
  pohjoista_group:0 "Pohjoista"
  uzkolian:0 "Uzkolian"
@@ -100,6 +101,7 @@
  saelish:0 "Salish"
  ostemer:0 "Ostemer"
  nordmarker:0 "Nordmarker"
+ chantlisch:0 "Chantlisch"
 
  musarfic_group:0 "Musarfic"
  sanedian:0 "Sanedian"
