--- a/localisation/TD_01_flavour_ehrenia_l_english.yml
+++ b/localisation/TD_01_flavour_ehrenia_l_english.yml
@@ -1,3 +1,31 @@
 ﻿l_english:
+
+ #### Ehrenstaat start
+
+ ## Government
+
  ehrenic_confederation:0 "2nd Ehrenic Confederation"
  ehrenic_confederation_desc:0 "The Confederation is a union between the cities and states of ehren and noorden peoples. After the brutal civil war and the fall of 1st Ehrenic Confederation, this new government has been proclaimed, even more disfunctional than the last."
+
+ # Mechanics
+
+ ability_ehrenstaat_start_mechanics:0 "Ehren Power Struggle"
+
+ consul_authority_power:0 "Consul Authority"
+ consul_authority_power_desc:0 "Shows how much authority consul has in our country. After war with Nifthem this will determine what political future awaits this country."
+ consul_authority_power_gain_modifier:0 "Consul Authority"
+ monthly_consul_authority_power:0 "Consul Authority"
+
+ war_preparedness_power:0 "War Preparedness"
+ war_preparedness_power_desc:0 "Shows how ready is our country to continue our conquest of Nifthem. We will be able to attack Nifthem before we achieve full readiness but our troops will be weaker."
+ war_preparedness_power_gain_modifier:0 "War Preparedness"
+ monthly_war_preparedness_power:0 "War Preparedness"
+
+ ehrenstaat_additional_garrisons_button:0 "Establish Additional Garrisons"
+ ehrenstaat_additional_garrisons_button_desc:0 "We will send more soldiers to our home front so we can keep our cities safe, and politicians quiet."
+
+ ehrenstaat_military_expansion_button:0 "Military Expansion"
+ ehrenstaat_military_expansion_button_desc:0 "By increasing our funds to military so we can get more prepared to conquest of Nifthem."
+
+ ehrenstaat_strengthen_republicanism_button:0 "Strengthen Republicanism"
+ ehrenstaat_strengthen_republicanism_button_desc:0 "Opposition got suspicious about our centralisation efforts and are accusing us of authoritarism. By giving a public speech we can reassure them that our intentions are pure."
