--- a/localisation/EU4_l_english.yml
+++ b/localisation/EU4_l_english.yml
@@ -4971,31 +4971,31 @@
  alert_can_use_russian_ability_delayed:0 "$POWERS|Y$ can currently be used."
  alert_can_use_cossacks_ability_instant:0 "§YCan use a Cossacks ability!§!"
  alert_can_use_cossacks_ability_delayed:0 "$POWERS|Y$ can currently be used."
- POSSIBLE_INCIDENTS:0 "Possible Incidents"
- ACTIVE_INCIDENTS:0 "Active Incidents"
- PAST_INCIDENTS:0 "Past Incidents"
- ISOLATIONISM:0 "Isolationism"
- ISOLATIONISM_LEVEL_TITLE:0 ""$ISOLATIONLEVELTITLE|Y$ (§YLevel $ISOLATIONLEVEL$§!)""
- ISOLATIONISM_MECHANIC_DESCRIPTION:1 "Isolationism represents a nation's willingness to adopt ideas and technologies from abroad. It can range from $FIRSTISOLATIONLEVELNAME|Y$ (§YLevel $FIRSTISOLATIONLEVELVALUE$§!) to $LASTISOLATIONLEVELNAME|Y$ (§YLevel $LASTISOLATIONLEVELVALUE$§!).\n\n§MIsolationism is changed through the way you react to Incidents that occur during the game. Each Incident lasts for more than 10 years and can end with your Isolationism moving towards Open, Closed or leaving it unchanged.§!"
- YOUR_CURRENT_ISOLATIONISM_INSTANT:1 "Your current Isolationism level is "$ISOLATIONLEVELTITLE|Y$ (§YLevel $ISOLATIONLEVEL$§!)"\n$ISOLATIONLEVELDESCRIPTION$"
- THEIR_CURRENT_ISOLATIONISM_INSTANT:0 "$ISOLATIONLEVELTITLE|Y$ (§Y$ISOLATIONLEVEL$§!)"
- CURRENT_ISOLATIONISM_DELAYED:0 "$ISOLATIONLEVELDESCRIPTION$"
- ISOLATIONISM_LEVELS_LIST:0 "If our Isolationism levels change, our nation would get the following effects:\n$ISOLATIONISMDESCRIPTIONLIST$"
- open_doors_isolation:0 "Open Doors"
- open_doors_isolation_title:0 "Open Doors"
- open_doors_isolation_desc:0 ""
- adaptive_isolation:0 "Adaptive"
- adaptive_isolation_title:0 "Adaptive"
- adaptive_isolation_desc:0 ""
- selective_integration_isolation:0 "Selective Integration"
- selective_integration_isolation_title:0 "Selective Integration"
- selective_integration_isolation_desc:0 ""
- isolationism_isolation:0 "Isolationism"
- isolationism_isolation_title:0 "Isolationism"
- isolationism_isolation_desc:0 ""
- closed_doors_isolation:0 "Closed Doors"
- closed_doors_isolation_title:0 "Closed Doors"
- closed_doors_isolation_desc:0 ""
+ #POSSIBLE_INCIDENTS:0 "Possible Incidents"
+ #ACTIVE_INCIDENTS:0 "Active Incidents"
+ #PAST_INCIDENTS:0 "Past Incidents"
+ #ISOLATIONISM:0 "Isolationism"
+ #ISOLATIONISM_LEVEL_TITLE:0 ""$ISOLATIONLEVELTITLE|Y$ (§YLevel $ISOLATIONLEVEL$§!)""
+ #ISOLATIONISM_MECHANIC_DESCRIPTION:1 "Isolationism represents a nation's willingness to adopt ideas and technologies from abroad. It can range from $FIRSTISOLATIONLEVELNAME|Y$ (§YLevel $FIRSTISOLATIONLEVELVALUE$§!) to $LASTISOLATIONLEVELNAME|Y$ (§YLevel $LASTISOLATIONLEVELVALUE$§!).\n\n§MIsolationism is changed through the way you react to Incidents that occur during the game. Each Incident lasts for more than 10 years and can end with your Isolationism moving towards Open, Closed or leaving it unchanged.§!"
+ #YOUR_CURRENT_ISOLATIONISM_INSTANT:1 "Your current Isolationism level is "$ISOLATIONLEVELTITLE|Y$ (§YLevel $ISOLATIONLEVEL$§!)"\n$ISOLATIONLEVELDESCRIPTION$"
+ #THEIR_CURRENT_ISOLATIONISM_INSTANT:0 "$ISOLATIONLEVELTITLE|Y$ (§Y$ISOLATIONLEVEL$§!)"
+ #CURRENT_ISOLATIONISM_DELAYED:0 "$ISOLATIONLEVELDESCRIPTION$"
+ #ISOLATIONISM_LEVELS_LIST:0 "If our Isolationism levels change, our nation would get the following effects:\n$ISOLATIONISMDESCRIPTIONLIST$"
+ #open_doors_isolation:0 "Open Doors"
+ #open_doors_isolation_title:0 "Open Doors"
+ #open_doors_isolation_desc:0 ""
+ #adaptive_isolation:0 "Adaptive"
+ #adaptive_isolation_title:0 "Adaptive"
+ #adaptive_isolation_desc:0 ""
+ #selective_integration_isolation:0 "Selective Integration"
+ #selective_integration_isolation_title:0 "Selective Integration"
+ #selective_integration_isolation_desc:0 ""
+ #isolationism_isolation:0 "Isolationism"
+ #isolationism_isolation_title:0 "Isolationism"
+ #isolationism_isolation_desc:0 ""
+ #closed_doors_isolation:0 "Closed Doors"
+ #closed_doors_isolation_title:0 "Closed Doors"
+ #closed_doors_isolation_desc:0 ""
  PRESS_SAILORS_TITLE:0 "Press Sailors"
  pressed_sailors:0 "Pressed Sailors"
  CANT_PRESS_SAILORS_TOO_FEW:0 "You can't press sailors from a colonial nation, if they have less than $NEED|Y$ of their sailors. They currently have $CURR|Y$."
