--- a/localisation/TD_01_flavour_ehrenia_l_english.yml
+++ b/localisation/TD_01_flavour_ehrenia_l_english.yml
@@ -29,3 +29,42 @@
 
  ehrenstaat_strengthen_republicanism_button:0 "Strengthen Republicanism"
  ehrenstaat_strengthen_republicanism_button_desc:0 "Opposition got suspicious about our centralisation efforts and are accusing us of authoritarism. By giving a public speech we can reassure them that our intentions are pure."
+
+ #### Ehren Saelianism
+
+ ## Isolationism
+
+ # Tiers
+
+ sigilian_supervision_isolation:0 "Sigilian Supervision"
+ sigilian_supervision_isolation_title:0 "Sigilian Supervision"
+ sigilian_supervision_isolation_desc:0 "Our current structure and doctrines are very close to particularist side of Sigilianism."
+
+ sigilian_favourism_isolation:0 "Sigilian Favourism"
+ sigilian_favourism_isolation_title:0 "Sigilian Favourism"
+ sigilian_favourism_isolation_desc:0 "Our current structure and doctrines are closer to Sigilianism than Ehren traditions."
+
+ moderate_syncretism_isolation:0 "Moderate Syncretism"
+ moderate_syncretism_isolation_title:0 "Moderate Syncretism"
+ moderate_syncretism_isolation_desc:0 "We are maintaining balance between Sigilianists and Ehrenists"
+
+ ehren_favourism_isolation:0 "Ehren Favourism"
+ ehren_favourism_isolation_title:0 "Ehren Favourism"
+ ehren_favourism_isolation_desc:0 "Our current structure and doctrines are closer to Ehren traditions than Sigilianism."
+
+ ehren_exceptionalism_isolation:0 "Ehren Exceptionalism"
+ ehren_exceptionalism_isolation_title:0 "Ehren Exceptionalism"
+ ehren_exceptionalism_isolation_desc:0 "Our current structure and doctrines are very close to old Ehren belief system."
+
+ # Mechanic
+
+ POSSIBLE_INCIDENTS:0 "Possible Incidents"
+ ACTIVE_INCIDENTS:0 "Active Incidents"
+ PAST_INCIDENTS:0 "Past Incidents"
+ ISOLATIONISM:0 "Syncretism"
+ ISOLATIONISM_LEVEL_TITLE:0 ""$ISOLATIONLEVELTITLE|Y$ (§YLevel $ISOLATIONLEVEL$§!)""
+ ISOLATIONISM_MECHANIC_DESCRIPTION:1 "Syncretism represents a nation's direction in Ehren-Sigilian relations. It can range from $FIRSTISOLATIONLEVELNAME|Y$ (§YLevel $FIRSTISOLATIONLEVELVALUE$§!) to $LASTISOLATIONLEVELNAME|Y$ (§YLevel $LASTISOLATIONLEVELVALUE$§!).\n\n§MSyncretism is changed through the way you react to Incidents that occur during the game. Each Incident lasts for more than 10 years and can end with your Isolationism moving towards Ehren traditions, Sigilianism or leaving it unchanged.§!"
+ YOUR_CURRENT_ISOLATIONISM_INSTANT:1 "Your current Syncretism level is "$ISOLATIONLEVELTITLE|Y$ (§YLevel $ISOLATIONLEVEL$§!)"\n$ISOLATIONLEVELDESCRIPTION$"
+ THEIR_CURRENT_ISOLATIONISM_INSTANT:0 "$ISOLATIONLEVELTITLE|Y$ (§Y$ISOLATIONLEVEL$§!)"
+ CURRENT_ISOLATIONISM_DELAYED:0 "$ISOLATIONLEVELDESCRIPTION$"
+ ISOLATIONISM_LEVELS_LIST:0 "If our Syncretism levels change, our nation would get the following effects:\n$ISOLATIONISMDESCRIPTIONLIST$"
