--- a/localisation/TD_01_flavour_ehrenia_l_english.yml
+++ b/localisation/TD_01_flavour_ehrenia_l_english.yml
@@ -42,7 +42,7 @@
 
  sigilian_favourism_isolation:0 "Sigilian Favourism"
  sigilian_favourism_isolation_title:0 "Sigilian Favourism"
- sigilian_favourism_isolation_desc:0 "Our current structure and doctrines are closer to Sigilianism than Ehren traditions."
+ sigilian_favourism_isolation_desc:0 "Our current structure and doctrines are closer to Sigilianism than Ehrenism."
 
  moderate_syncretism_isolation:0 "Moderate Syncretism"
  moderate_syncretism_isolation_title:0 "Moderate Syncretism"
@@ -50,7 +50,7 @@
 
  ehren_favourism_isolation:0 "Ehren Favourism"
  ehren_favourism_isolation_title:0 "Ehren Favourism"
- ehren_favourism_isolation_desc:0 "Our current structure and doctrines are closer to Ehren traditions than Sigilianism."
+ ehren_favourism_isolation_desc:0 "Our current structure and doctrines are closer to Ehrenism than Sigilianism."
 
  ehren_exceptionalism_isolation:0 "Ehren Exceptionalism"
  ehren_exceptionalism_isolation_title:0 "Ehren Exceptionalism"
@@ -63,7 +63,7 @@
  PAST_INCIDENTS:0 "Past Incidents"
  ISOLATIONISM:0 "Syncretism"
  ISOLATIONISM_LEVEL_TITLE:0 ""$ISOLATIONLEVELTITLE|Y$ (§YLevel $ISOLATIONLEVEL$§!)""
- ISOLATIONISM_MECHANIC_DESCRIPTION:1 "Syncretism represents a nation's direction in Ehren-Sigilian relations. It can range from $FIRSTISOLATIONLEVELNAME|Y$ (§YLevel $FIRSTISOLATIONLEVELVALUE$§!) to $LASTISOLATIONLEVELNAME|Y$ (§YLevel $LASTISOLATIONLEVELVALUE$§!).\n\n§MSyncretism is changed through the way you react to Incidents that occur during the game. Each Incident lasts for more than 10 years and can end with your Isolationism moving towards Ehren traditions, Sigilianism or leaving it unchanged.§!"
+ ISOLATIONISM_MECHANIC_DESCRIPTION:1 "Syncretism represents a nation's direction in Ehren-Sigilian relations. It can range from $FIRSTISOLATIONLEVELNAME|Y$ (§YLevel $FIRSTISOLATIONLEVELVALUE$§!) to $LASTISOLATIONLEVELNAME|Y$ (§YLevel $LASTISOLATIONLEVELVALUE$§!).\n\n§MSyncretism is changed through the way you react to Incidents that occur during the game. Each Incident lasts for more than 10 years and can end with your Isolationism moving towards Ehrenism, Sigilianism or leaving it unchanged.§!"
  YOUR_CURRENT_ISOLATIONISM_INSTANT:1 "Your current Syncretism level is "$ISOLATIONLEVELTITLE|Y$ (§YLevel $ISOLATIONLEVEL$§!)"\n$ISOLATIONLEVELDESCRIPTION$"
  THEIR_CURRENT_ISOLATIONISM_INSTANT:0 "$ISOLATIONLEVELTITLE|Y$ (§Y$ISOLATIONLEVEL$§!)"
  CURRENT_ISOLATIONISM_DELAYED:0 "$ISOLATIONLEVELDESCRIPTION$"
