--- a/localisation/TD_01_flavour_ehren_saelianism_l_english.yml
+++ b/localisation/TD_01_flavour_ehren_saelianism_l_english.yml
@@ -39,6 +39,16 @@
 
  #### Incidents
 
+ ## Events Tooltip
+
+ ehren_saelianism_events.sigilianism_start.tt:0 "We will support Sigilian stance on this matter"
+ ehren_saelianism_events.sigilianism_increase_tt:0 "It will push us to Sigilianist stance in this incident"
+ ehren_saelianism_events.sigilianism_huge_increase_tt:0 "It will significantly push us to Sigilianist stance in this incident"
+
+ ehren_saelianism_events.ehrenism_start.tt:0 "We will support Ehren stance on this matter"
+ ehren_saelianism_events.ehrenism_increase_tt:0 "It will push us to Ehren stance in this incident"
+ ehren_saelianism_events.ehrenism_huge_increase_tt:0 ""It will significantly push us to Ehren stance in this incident""
+
  ## Nifthem
  
  incident_nifthem_conquest_title:0 "Kill nifthem"
@@ -46,5 +56,13 @@
 
  # Events
 
- ehren_saelianism_events.sigilianism_start.tt:0 "We will support Sigilian stance on this matter"
- ehren_saelianism_events.ehrenism_start.tt:0 "We will support Ehren stance on this matter"
+ td_ehren_saelianism.1.t:0 "Question of Nifthem"
+ td_ehren_saelianism.1.desc:0 "Our missionaries want to go with our troops to Nifthem so they can convert them."
+ td_ehren_saelianism.1.a:0 "We need to respect local Sigilian believers"
+ td_ehren_saelianism.1.b:0 "We will convert them to true path"
+
+ td_ehren_saelianism.2.t:0 "Rampant Missionaries"
+ td_ehren_saelianism.2.desc:0 "We recieved complaints from Nifthemi citizens that our missionaries are very aggresive in their convertion methods and they demand us to take this matter into out hands."
+ td_ehren_saelianism.2.a:0 "Reprimand them"
+ td_ehren_saelianism.2.b:0 "Force peaceful methods of convertions"
+ td_ehren_saelianism.2.c:0 "Support their actions"
