--- a/localisation/TD_01_flavour_ehren_saelianism_l_english.yml
+++ b/localisation/TD_01_flavour_ehren_saelianism_l_english.yml
@@ -47,7 +47,7 @@
 
  ehren_saelianism_events_ehrenism_start.tt:0 "We will support Ehren stance on this matter"
  ehren_saelianism_events_ehrenism_increase_tt:0 "It will push us to Ehren stance in this incident"
- ehren_saelianism_events_ehrenism_huge_increase_tt:0 "It will significantly push us to Ehren stance in this incident""
+ ehren_saelianism_events_ehrenism_huge_increase_tt:0 "It will significantly push us to Ehren stance in this incident"
 
  ## Nifthem
  
@@ -56,7 +56,7 @@
 
  # Events
 
- td_ehren_saelianism.1.t:0 "Official Stance"
+ td_ehren_saelianism.1.t:0 "Official Stance in Nifthem"
  td_ehren_saelianism.1.desc:0 "We recieved a lot of lists from different clergy representatives with one important question. Conversion of Nifthem is now one of the most important topics in this moment and everybody wants to know our stance about this topic. Should we treat them as equals and respect their faith or enforce our own beliefs?"
  td_ehren_saelianism.1.a:0 "Treat them with respect"
  td_ehren_saelianism.1.b:0 "They must be enlightened!"
@@ -77,7 +77,7 @@
  td_ehren_saelianism.3.a:0 "Abolish them!"
  td_ehren_saelianism.3.b:0 "Allow them to continue"
 
- ehren_saelianism_events_nifthem_discrimination_tt:0 "There is a 25% chance for every Nifthemian, Sigilian province to recieve a modifier that gives local unrest and boosts local missionary strenght"
+ ehren_saelianism_events_nifthem_discrimination_tt:0 "There is a 25% chance for every Nifthemian, Sigilian province to recieve a modifier that gives local unrest and boosts local missionary strength"
  ehren_saelianism_nifthem_sigilian_discrimination:0 "Discrimination Zone"
  desc_ehren_saelianism_nifthem_sigilian_discrimination:0 "Local Ehren Saelian followers decided to isolate themselves from Sigilian communities."
  
