--- a/localisation/TD_01_flavour_novoregno_l_english.yml
+++ b/localisation/TD_01_flavour_novoregno_l_english.yml
@@ -18,7 +18,7 @@
  marry_a_devout_agellidian_aspect:0 "Marry a Devout Agellidian"
  desc_marry_a_devout_agellidian_aspect:0 "Love is a great thing - especially if it's supported politicaly and religiously."
 
- enlighten_the_natives_aspect:0 "Enligthen the Natives"
+ enlighten_the_natives_aspect:0 "Enlighten the Natives"
  desc_enlighten_the_natives_aspect:0 "Those ignorant and uncivilized people should finally see the light of our God."
  enlighten_the_natives_aspect_tt:0 "Random §YPagan§! province will become §YAgellidian§! and gain §G1§! §YBase Production§!."
 
