--- a/localisation/TD_colonial_regions_l_english.yml
+++ b/localisation/TD_colonial_regions_l_english.yml
@@ -84,3 +84,7 @@
  COLONIAL_fordland_ADJ:0 "Fordland"
  COLONIAL_Root_Culture_GetName_radoriasa:0 "[Root.GetAdjective] Radoriasa"
  COLONIAL_Root_Culture_GetName_radoriasa_ADJ:0 "[Root.GetAdjective] Radoriasan"
+
+ colonial_secesa:0 "Colonial Secesa"
+ COLONIAL_Root_Culture_GetName_secesa:0 "[Root.GetAdjective] Secesa"
+ COLONIAL_Root_Culture_GetName_secesa_ADJ:0 "[Root.GetAdjective] Secesan"
