--- a/localisation/TD_tradenodes_l_english.yml
+++ b/localisation/TD_tradenodes_l_english.yml
@@ -61,3 +61,5 @@
  radoriasa_tradenode:0 "Radoriasa"
  upper_moorfluss_tradenode:0 "Upper Moorfluss"
  forstlic_sea_tradenode:0 "Forstlic Sea"
+ costa_dourada_tradenode:0 "Costa Dourada"
+ secesa_tradenode:0 "Secesa"
