--- a/localisation/TD_01_flavour_ehren_saelianism_l_english.yml
+++ b/localisation/TD_01_flavour_ehren_saelianism_l_english.yml
@@ -52,7 +52,7 @@
  ## Nifthem
  
  incident_nifthem_conquest_title:0 "Question of Nifthem"
- incident_nifthem_conquest_desc:0 "For a long time lack of official stance towards convertion in Nifthemi lands created a lot of problems. But with us becoming even more and more present in these lands we should finally decide what should be done."
+ incident_nifthem_conquest_desc:0 "For a long time lack of official stance towards convertion in Nifthemi lands created a lot of problems. But with us becoming even more and more present in this region we should finally decide what should be done."
 
  # Events
 
