--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -10,6 +10,7 @@
  vashirani:0 "Vashirani"
  restaurers:0 "Restaurers"
  saelian_ehrenic_pantheon:0 "Ehren Saelianism"
+ saelian_ehrenic_pantheon_religion_desc:0 "Ehren Saelianism is a mixture between old Ehren beliefs and Sigilian doctrines. It was created when a desperate missionaries presented old Ehren gods as more noble and exalted than others in attempt to convert these lands. At first this movement was treated as a very radical particualist faction within Sigilianism, later it changed with Ehren Saelianism being treated as a seperate religion. This caused creation of different faction to appear and fight over its future. Sigilianist faction want to return to its Sigilian route, Ehrenist faction try to increase Ehren influence on its traditions, Moderates are strong supporters of remaining current structure and doctrines of the Ehren Saelianism and continuing to exist as one of Saelianist branches."
  traditionalists:0 "Traditionalists"
  liemarian:0 "Liemarian"
  liemarian_religion_desc:0 "Liemarianism is the fruit of saelian reformation which was slowly building up since the XIV century. They reject the monarchical approach of Sigilianism and Eneratianism and argue, that the representative of God on earth should be elected by the saelian community. The elements of original Saelian syncretism are still present within liemarianism but more nuanced than in earlier days."
