--- a/localisation/TD_01_flavour_ehren_saelianism_l_english.yml
+++ b/localisation/TD_01_flavour_ehren_saelianism_l_english.yml
@@ -80,4 +80,27 @@
  ehren_saelianism_events_nifthem_discrimination_tt:0 "There is a 25% chance for every Nifthemian, Sigilian province to recieve a modifier that gives local unrest and boosts local missionary strength"
  ehren_saelianism_nifthem_sigilian_discrimination:0 "Discrimination Zone"
  desc_ehren_saelianism_nifthem_sigilian_discrimination:0 "Local Ehren Saelian followers decided to isolate themselves from Sigilian communities."
+
+ td_ehren_saelianism.4.t:0 "Religious Rebellions"
+ td_ehren_saelianism.4.desc:0 "Radical elements in Nifthem started to rebel against our rule! Ehrenists are accusing us of not doing enough to help their convertion methods and local Sigilians are accusing us of not doing enough to stop violence against them. We can crush one of the sides and appease to another side, but we can also crush elements from both sides and force them to calm down."
+ td_ehren_saelianism.4.a:0 "Crush Ehrenists"
+ td_ehren_saelianism.4.b:0 "Crush both of them"
+ td_ehren_saelianism.4.c:0 "Crush Sigilians"
+
+ td_ehren_saelianism.5.t:0 "Sigilianists Successful in Nifthem"
+ td_ehren_saelianism.5.desc:0 "Our actions in this incident made Sigilianists more powerful in our country. Because of that our main doctrine has become more Sigilian and we are moving slowly to reintegration into Sigilianism."
+ td_ehren_saelianism.5.a:0 "Good"
+ ehren_saelianism_nifthem_end_sigilianists:0 "Sigilianists Victorious in Nifthem"
+ desc_ehren_saelianism_nifthem_end_sigilianists:0 "Because of that we are more tolerant to Sigilians"
  
+ td_ehren_saelianism.6.t:0 "Moderates Successful in Nifthem"
+ td_ehren_saelianism.6.desc:0 "Our actions in this incident allowed us to keep balance between Siglianists and Ehrenists. Our main doctrine has remained unchanged."
+ td_ehren_saelianism.6.a:0 "Good"
+ ehren_saelianism_nifthem_end_moderates:0 "Moderates Victorious in Nifthem"
+ desc_ehren_saelianism_nifthem_end_moderates:0 "Because of that we are more united"
+
+ td_ehren_saelianism.7.t:0 "Ehrenists Successful in Nifthem"
+ td_ehren_saelianism.7.desc:0 "Our actions in this incident made Ehrenists more powerful in our country. Because of that our main doctrine has become more Ehren slowly reintroducing old traditions to our faith."
+ td_ehren_saelianism.7.a:0 "Good"
+ ehren_saelianism_nifthem_end_ehrenists:0 "Ehrenists Victorious in Nifthem"
+ desc_ehren_saelianism_nifthem_end_ehrenists:0 "Because of that our missionaries are devoted to converting"
