--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -487,3 +487,17 @@
  northern_ethland_area:0 "Northern Ethland"
  isutland_area:0 "Isutland"
  mircebrim_area:0 "Mircebrim"
+
+
+ forstilic_sea_area:0 "Forstilic Sea"
+ furhbay_area:0 "Furhbay"
+ seolh_bay_area:0 "Seolh Bay"
+ blawenn_coast_area:0 "Blawenn Coast"
+ white_bay_area:0 "White Bay"
+ north_thiccet_area:0 "North Thiccet"
+ marqez_area:0 "Marqez"
+ pascimahed_area:0 "Pascimahed"
+ amealungal_area:0 "Amealunga"
+ durnari_area:0 "Durnari"
+ pantana_area:0 "Pantana"
+ berawold_area:0 "Berawold"
