--- a/localisation/prov_names_adj_l_english.yml
+++ b/localisation/prov_names_adj_l_english.yml
@@ -1133,7 +1133,7 @@
  PROV_ADJ1132:0 "1132"
  PROV_ADJ1133:0 "1133"
  PROV_ADJ1134:0 "1134"
- PROV_ADJ1135:0 "Bay of Dagica"
+ PROV_ADJ1135:0 "Bay of Dagolli"
  PROV_ADJ1136:0 "1136"
  PROV_ADJ1137:0 "1137"
  PROV_ADJ1138:0 "1138"
