--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1027,7 +1027,7 @@
  PROV1026:0 "Samtzar"
  PROV1027:0 "mumtalakat" #estate
  PROV1028:0 "Mazar Eyina" #Tomb Eyina
- PROV1029:0 "Arctic Sea"
+ PROV1029:0 "Western Arctic Sea"
  PROV1030:0 "'ardi Burj" #ground tower
  PROV1031:0 "Bustan" #grove
  PROV1032:0 "Yuqabila" #meet
@@ -1133,7 +1133,7 @@
  PROV1132:0 "1132"
  PROV1133:0 "1133"
  PROV1134:0 "1134"
- PROV1135:0 "Bay of Dagica"
+ PROV1135:0 "Bay of Dagolli"
  PROV1136:0 "1136"
  PROV1137:0 "1137"
  PROV1138:0 "1138"
@@ -1153,7 +1153,7 @@
  PROV1152:0 "Qaravakh"
  PROV1153:0 "Saint Renard's Bay"
  PROV1154:0 "Qarasam Sea"
- PROV1155:0 "1155"
+ PROV1155:0 "Belezzan Approach"
  PROV1156:0 "Hawaldvi Coast"
  PROV1157:0 "1157"
  PROV1158:0 "1158"
@@ -1167,7 +1167,7 @@
  PROV1166:0 "1166"
  PROV1167:0 "1167"
  PROV1168:0 "Mathilda's Bay"
- PROV1169:0 "1169"
+ PROV1169:0 "Jiegnorran Sea"
  PROV1170:0 "Kuchax"
  PROV1171:0 "Kuatipetl"
  PROV1172:0 "1172"
@@ -1232,7 +1232,7 @@
  PROV1231:0 "Sunbati Coast"
  PROV1232:0 "Hyncae"
  PROV1233:0 "Apahlamke"
- PROV1234:0 "1234"
+ PROV1234:0 "Eastern Arctic Sea"
  PROV1235:0 "Prugos"
  PROV1236:0 "Syrassea"
  PROV1237:0 "Miphos"
@@ -1534,7 +1534,7 @@
  PROV1533:0 "1533"
  PROV1534:0 "Pahachok"
  PROV1535:0 "1535"
- PROV1536:0 "1536"
+ PROV1536:0 "Minisan Approach"
  PROV1537:0 "1537"
  PROV1538:0 "1538"
  PROV1539:0 "1539"
@@ -1571,7 +1571,7 @@
  PROV1570:0 "1570"
  PROV1571:0 "1571"
  PROV1572:0 "1572"
- PROV1573:0 "1573"
+ PROV1573:0 "Central Arctic Sea"
  PROV1574:0 "1574"
  PROV1575:0 "1575"
  PROV1576:0 "1576"
@@ -1585,39 +1585,39 @@
  PROV1584:0 "1584"
  PROV1585:0 "1585"
  PROV1586:0 "1586"
- PROV1587:0 "1587"
+ PROV1587:0 "Eastern Lantan Sea"
  PROV1588:0 "1588"
  PROV1589:0 "1589"
  PROV1590:0 "1590"
  PROV1591:0 "1591"
  PROV1592:0 "1592"
  PROV1593:0 "1593"
- PROV1594:0 "1594"
+ PROV1594:0 "Northern Dalvian Waters"
  PROV1595:0 "1595"
  PROV1596:0 "1596"
  PROV1597:0 "1597"
  PROV1598:0 "1598"
  PROV1599:0 "1599"
- PROV1600:0 "1600"
+ PROV1600:0 "Thiccen Sea"
  PROV1601:0 "1601"
  PROV1602:0 "1602"
  PROV1603:0 "1603"
  PROV1604:0 "1604"
  PROV1605:0 "1605"
  PROV1606:0 "Galeqan"
- PROV1607:0 "1607"
+ PROV1607:0 "Eastern Thiccen Sea"
  PROV1608:0 "1608"
- PROV1609:0 "1609"
+ PROV1609:0 "Western Lantan Sea"
  PROV1610:0 "1610"
  PROV1611:0 "1611"
- PROV1612:0 "1612"
+ PROV1612:0 "Mamshawoldian Coast"
  PROV1613:0 "1613"
  PROV1614:0 "1614"
  PROV1615:0 "1615"
  PROV1616:0 "1616"
  PROV1617:0 "1617"
  PROV1618:0 "1618"
- PROV1619:0 "1619"
+ PROV1619:0 "Liemarlander Coast"
  PROV1620:0 "1620"
  PROV1621:0 "1621"
  PROV1622:0 "1622"
@@ -1741,18 +1741,18 @@
  PROV1740:0 "1740"
  PROV1741:0 "1741"
  PROV1742:0 "Radoriasan Bay"
- PROV1743:0 "1743"
+ PROV1743:0 "Secenan Coast"
  PROV1744:0 "1744"
  PROV1745:0 "1745"
  PROV1746:0 "1746"
- PROV1747:0 "1747"
+ PROV1747:0 "Cadeilhasi Coast"
  PROV1748:0 "1748"
  PROV1749:0 "1749"
  PROV1750:0 "1750"
  PROV1751:0 "1751"
- PROV1752:0 "1752"
+ PROV1752:0 "Maraqitan Coast"
  PROV1753:0 "1753"
- PROV1754:0 "1754"
+ PROV1754:0 "Outer Qarbali Sea"
  PROV1755:0 "1755"
  PROV1756:0 "1756"
  PROV1757:0 "1757"
@@ -1910,7 +1910,7 @@
  PROV1909:0 "1909"
  PROV1910:0 "1910"
  PROV1911:0 "1911"
- PROV1912:0 "1912"
+ PROV1912:0 "Forstland"
  PROV1913:0 "1913"
  PROV1914:0 "1914"
  PROV1915:0 "1915"
@@ -1947,7 +1947,7 @@
  PROV1946:0 "1946"
  PROV1947:0 "1947"
  PROV1948:0 "1948"
- PROV1949:0 "1949"
+ PROV1949:0 "Costervan Sea"
  PROV1950:0 "1950"
  PROV1951:0 "1951"
  PROV1952:0 "1952"
@@ -1969,7 +1969,7 @@
  PROV1968:0 "Surad"
  PROV1969:0 "Tamarat"
  PROV1970:0 "Astaxum"
- PROV1971:0 "1971" #todo
+ PROV1971:0 "Kehardian Coast"
  PROV1972:0 "Dusha"
  PROV1973:0 "Spitam"
  PROV1974:0 "Astaram"
@@ -1985,7 +1985,7 @@
  PROV1984:0 "Vasagh"
  PROV1985:0 "Varain"
  PROV1986:0 "Arshuxad"
- PROV1987:0 "1987"
+ PROV1987:0 "Pirugan Strait"
  PROV1988:0 "Irithyat"
  PROV1989:0 "Kadah"
  PROV1990:0 "Yamusap"
@@ -2012,10 +2012,10 @@
  PROV2011:0 "Shadawah"
  PROV2012:0 "Nivoshothra"
  PROV2013:0 "Sawsar"
- PROV2014:0 "2014"
+ PROV2014:0 "Outer Maquchan Bay"
  PROV2015:0 "Xatmar"
  PROV2016:0 "Matagam"
- PROV2017:0 "2017" #!
+ PROV2017:0 "Michinan Coast"
  PROV2018:0 "Qarsanish"
  PROV2019:0 "Ramashtar"
  PROV2020:0 "Meleqars"
@@ -2040,7 +2040,7 @@
  PROV2039:0 "Hitraan"
  PROV2040:0 "2040"
  PROV2041:0 "2041"
- PROV2042:0 "2042"
+ PROV2042:0 "Agellardian Coast"
  PROV2043:0 "2043"
  PROV2044:0 "2044"
  PROV2045:0 "2045"
@@ -2061,7 +2061,7 @@
  PROV2060:0 "Wiyaharg"
  PROV2061:0 "Karunabal"
  PROV2062:0 "2062"
- PROV2063:0 "2063"
+ PROV2063:0 "The Golden Gulf"
  PROV2064:0 "2064"
  PROV2065:0 "2065"
  PROV2066:0 "Durnari"
@@ -2199,9 +2199,9 @@
  PROV2198:0 "2198"
  PROV2199:0 "2199"
  PROV2200:0 "2200"
- PROV2201:0 "2201"
+ PROV2201:0 "Panpallpan Coast"
  PROV2202:0 "2202"
- PROV2203:0 "2203"
+ PROV2203:0 "Lauran Gulf"
  PROV2204:0 "2204"
  PROV2205:0 "2205"
  PROV2206:0 "2206"
@@ -2306,26 +2306,26 @@
  PROV2305:0 "Paqucha"
  PROV2306:0 "2306"
  PROV2307:0 "2307"
- PROV2308:0 "2308"
+ PROV2308:0 "Northern Thiccen Coast"
  PROV2309:0 "2309"
  PROV2310:0 "2310"
- PROV2311:0 "2311"
+ PROV2311:0 "Açúcarana"
  PROV2312:0 "2312"
- PROV2313:0 "2313"
- PROV2314:0 "2314"
+ PROV2313:0 "Engratiana"
+ PROV2314:0 "Paracasa"
  PROV2315:0 "2315"
- PROV2316:0 "2316"
- PROV2317:0 "2317"
- PROV2318:0 "2318"
- PROV2319:0 "2319"
- PROV2320:0 "2320"
- PROV2321:0 "2321"
+ PROV2316:0 "Juncara"
+ PROV2317:0 "Arraiasana"
+ PROV2318:0 "Porto Venatia"
+ PROV2319:0 "Cosanegra"
+ PROV2320:0 "Maraqita"
+ PROV2321:0 "Macara"
  PROV2322:0 "Avara"
  PROV2323:0 "2323"
  PROV2324:0 "2324"
  PROV2325:0 "Bolas"
  PROV2326:0 "Santa Sael"
- PROV2327:0 "2327"
+ PROV2327:0 "Piruga"
  PROV2328:0 "2328"
  PROV2329:0 "2329"
  PROV2330:0 "2330"
@@ -2334,12 +2334,12 @@
  PROV2333:0 "2333"
  PROV2334:0 "2334"
  PROV2335:0 "2335"
- PROV2336:0 "2336"
+ PROV2336:0 "Sao Casilda"
  PROV2337:0 "2337"
  PROV2338:0 "2338"
  PROV2339:0 "2339"
- PROV2340:0 "2340"
- PROV2341:0 "2341"
+ PROV2340:0 "Vaulago"
+ PROV2341:0 "New Paraconna"
  PROV2342:0 "2342"
  PROV2343:0 "2343"
  PROV2344:0 "Chingapa"
@@ -2460,7 +2460,7 @@
  PROV2459:0 "2459"
  PROV2460:0 "2460"
  PROV2461:0 "2461"
- PROV2462:0 "2462"
+ PROV2462:0 "Medrasa"
  PROV2463:0 "2463"
  PROV2464:0 "2464"
  PROV2465:0 "2465"
@@ -2638,7 +2638,7 @@
  PROV2637:0 "2637"
  PROV2638:0 "2638"
  PROV2639:0 "2639"
- PROV2640:0 "2640"
+ PROV2640:0 "Radoriasan Rainforest"
  PROV2641:0 "2641"
  PROV2642:0 "2642"
  PROV2643:0 "2643"
@@ -2923,7 +2923,7 @@
  PROV2922:0 "2922"
  PROV2923:0 "2923"
  PROV2924:0 "2924"
- PROV2925:0 "2925"
+ PROV2925:0 "Envonada"
  PROV2926:0 "2926"
  PROV2927:0 "2927"
  PROV2928:0 "2928"
