--- a/localisation/TD_01_flavour_ehren_saelianism_l_english.yml
+++ b/localisation/TD_01_flavour_ehren_saelianism_l_english.yml
@@ -49,10 +49,13 @@
  ehren_saelianism_events_ehrenism_increase_tt:0 "It will push us to Ehren stance in this incident"
  ehren_saelianism_events_ehrenism_huge_increase_tt:0 "It will significantly push us to Ehren stance in this incident"
 
+ ehren_saelianism_incident_recent_tooltip:0 "Recent incident was 25 years ago"
+
  ## Nifthem
  
  incident_nifthem_conquest_title:0 "Question of Nifthem"
  incident_nifthem_conquest_desc:0 "For a long time lack of official stance towards convertion in Nifthemi lands created a lot of problems. But with us becoming even more and more present in this region we should finally decide what should be done."
+ ehren_saelianism_nifthem_provinces:0 "Have 3 provinces in Nifthem"
 
  # Events
 
