--- a/localisation/TD_01_flavour_novoregno_l_english.yml
+++ b/localisation/TD_01_flavour_novoregno_l_english.yml
@@ -34,3 +34,6 @@
  TD_local_festivals_desc:0 "People of this province are temporarily free from worldly burdens."
  TD_nationalistic_fervor:0 "National Domination"
  TD_nationalistic_fervor_desc:0 "Cultural mixing is allowing us to propagate our culture even further."
+
+ AGELLIDIAN_ASPECTS_LONG:0 "Aspect of Faith"
+ AGELLIDIAN_ASPECTS_SHORT:0 "aspect"
