--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -75,7 +75,7 @@
  PROV74:0 "Riyaduna"
  PROV75:0 "Rizqal"
  PROV76:0 "Qafqumir"
- PROV77:0 "AFRICAAFRICA"
+ PROV77:0 "SAHILA"
  PROV78:0 "Marjanid"
  PROV79:0 "Dahrayyam"
  PROV80:0 "Desanaux"
@@ -104,9 +104,9 @@
  PROV103:0 "Abdal Aqalu"
  PROV104:0 "Abdal Akbar"
  PROV105:0 "Alnuqhira"
- PROV106:0 "Prov106"
- PROV107:0 "Prov107"
- PROV108:0 "Prov108"
+ PROV106:0 "106"
+ PROV107:0 "107"
+ PROV108:0 "108"
  PROV109:0 "Wyrmegnac"
  PROV110:0 "Dobutap"
  PROV111:0 "Geoberic Bay" 
@@ -1401,7 +1401,7 @@
  PROV1400:0 "Burdan"
  PROV1401:0 "Huniyagar"
  PROV1402:0 "Kistanzar"
- PROV1403:0 "1403"
+ PROV1403:0 "Kashtar"
  PROV1404:0 "Matah"
  PROV1405:0 "Varaqsham"
  PROV1406:0 "Yamhat"
