--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1716,7 +1716,7 @@
  PROV1715:0 "Abujman"
  PROV1716:0 "Akhakal" 
  PROV1717:0 "1717" #!
- PROV1718:0 "1718" #1
+ PROV1718:0 "1718" #!
  PROV1719:0 "1719"
  PROV1720:0 "Karisavela"
  PROV1721:0 "Karwazi"
@@ -2237,7 +2237,7 @@
  PROV2236:0 "2236"
  PROV2237:0 "2237"
  PROV2238:0 "Jatunara"
- PROV2239:0 "2239" #!
+ PROV2239:0 "2239"
  PROV2240:0 "Intibats"
  PROV2241:0 "Kullas"
  PROV2242:0 "Jatunara"
@@ -2252,7 +2252,7 @@
  PROV2251:0 "Mayurai"
  PROV2252:0 "Utyasan"
  PROV2253:0 "Jawurai"
- PROV2254:0 "2254" #!
+ PROV2254:0 "2254"
  PROV2255:0 "Maqkuch"
  PROV2256:0 "Chatuk"
  PROV2257:0 "Chewaluy"
@@ -2262,17 +2262,17 @@
  PROV2261:0 "Utujapa"
  PROV2262:0 "Sirujawa"
  PROV2263:0 "Chayunga"
- PROV2264:0 "2264" #!
+ PROV2264:0 "2264"
  PROV2265:0 "Puncha"
  PROV2266:0 "Mamaqocha"
  PROV2267:0 "Matepuchka"
  PROV2268:0 "Chikalata"
  PROV2269:0 "Randmuna"
- PROV2270:0 "2270" #!
+ PROV2270:0 "2270"
  PROV2271:0 "Iloallpa"
  PROV2272:0 "Killatla"
  PROV2273:0 "Macalpa"
- PROV2274:0 "2274" #!
+ PROV2274:0 "2274"
  PROV2275:0 "Nanatrwa"
  PROV2276:0 "Ashabil"
  PROV2277:0 "Puchpushta"
