--- a/localisation/TD_colonial_regions_l_english.yml
+++ b/localisation/TD_colonial_regions_l_english.yml
@@ -88,3 +88,7 @@
  colonial_secesa:0 "Colonial Secesa"
  COLONIAL_Root_Culture_GetName_secesa:0 "[Root.GetAdjective] Secesa"
  COLONIAL_Root_Culture_GetName_secesa_ADJ:0 "[Root.GetAdjective] Secesan"
+ 
+ colonial_westcoast:0 "Colonial Blawenn"
+ COLONIAL_Root_Culture_GetName_westcoast:0 "[Root.GetAdjective] Blawenn"
+ COLONIAL_Root_Culture_GetName_westcoast_ADJ:0 "[Root.GetAdjective] Blawennian"
