--- a/localisation/TD_regions_l_english.yml
+++ b/localisation/TD_regions_l_english.yml
@@ -61,3 +61,6 @@
  southern_niheyan_ocean:0 "Southen Niheyan Ocean"
  coicemhar_region:0 "Coicemhar"
  upper_moorfluss_region:0 "Upper Moorfluss"
+ blawenn_region:0 "Blawenn"
+ thiara_region:0 "Thiara"
+ upper_sipiwimekya_region:0 "Upper Sipiwimekya"
