--- a/localisation/TD_tradenodes_l_english.yml
+++ b/localisation/TD_tradenodes_l_english.yml
@@ -64,5 +64,5 @@
  costa_dourada_tradenode:0 "Costa Dourada"
  secesa_tradenode:0 "Secesa"
  coicemhar_tradenode:0 "Coicemhar"
- westcoast_tradenode:0 "Westcoast"
+ blawenn_tradenode:0 "Blawenn"
  sipiwimekya_valley_tradenode:0 "Sipiwimekya Valley"
