Saelian Ehrenic Flavour events
six new events, i hope the logic behind event triggers will work as intended.

--- a/localisation/TD_01_flavour_ehren_saelianism_l_english.yml
+++ b/localisation/TD_01_flavour_ehren_saelianism_l_english.yml
@@ -107,3 +107,44 @@
  td_ehren_saelianism.7.a:0 "Good"
  ehren_saelianism_nifthem_end_ehrenists:0 "Ehrenists Victorious in Nifthem"
  desc_ehren_saelianism_nifthem_end_ehrenists:0 "Because of that our missionaries are devoted to converting"
+ 
+ 
+ 
+ #### Flavour events
+ 
+ td_ehren_saelianism.100.t:0 "Ehrenist resurgence"
+ td_ehren_saelianism.100.desc:0 " "
+ td_ehren_saelianism.100.a:0 "It is what it is"
+ 
+ td_ehren_saelianism.101.t:0 "Sigilianist resurgence"
+ td_ehren_saelianism.101.desc:0 " "
+ td_ehren_saelianism.101.a:0 "It is what it is"
+ 
+ td_ehren_saelianism.102.t:0 "Saelian Ehrenic priest has made a fatal blunder"
+ td_ehren_saelianism.102.desc:0 " "
+ td_ehren_saelianism.102.a:0 "It is what it is"
+ td_ehren_saelianism.102.b:0 "Do something! Anything!"
+ 
+ td_ehren_saelianism.103.t:0 "Moderate Syncretists start to organize missionaries"
+ td_ehren_saelianism.103.desc:0 " "
+ td_ehren_saelianism.103.a:0 "Allow missionaries to work, but do not help them"
+ td_ehren_saelianism.103.b:0 "Help missionaries"
+ 
+ td_ehren_saelianism.104.t:0 "Sigilianists start Ehrenist Repressions"
+ td_ehren_saelianism.104.desc:0 " "
+ td_ehren_saelianism.104.a:0 "Tolerate religious discrimination"
+ td_ehren_saelianism.104.b:0 "Utilize the clergy to stop them!"
+ 
+ td_ehren_saelianism.105.t:0 "Ehrenists start Sigilianist Repressions"
+ td_ehren_saelianism.105.desc:0 " "
+ td_ehren_saelianism.105.a:0 "Tolerate religious discrimination"
+ td_ehren_saelianism.105.b:0 "Utilize the clergy to stop them!"
+ 
+ 
+ ## Event-related modifiers
+ 
+ TD_Saelian_Ehrenic_Fatal_Blunder:0 "Clerical fatal blunder"
+ TD_Saelian_Ehrenic_minor_missionary_activity:0 "Minor missionary activity"
+ TD_Saelian_Ehrenic_major_missionary_activity:0 "Major missionary activity"
+ TD_Saelian_Ehrenic_Ehrenist_Repressed:0 "Ehrenists repressed"
+ TD_Saelian_Ehrenic_Sigilianist_Repressed:0 "Sigilianists repressed"
