colonial names + fixes

--- a/localisation/TD_colonial_regions_l_english.yml
+++ b/localisation/TD_colonial_regions_l_english.yml
@@ -6,12 +6,16 @@
  COLONIAL_camanej_ADJ:0 "Camaneji"
  COLONIAL_Kamanechland:0 "Kamanechland"
  COLONIAL_Kamanechland:0 "Kamanechlander"
+ COLONIAL_new_dorchia:0 "New Dorchia"
+ COLONIAL_new_dorchia_ADJ:0 "New Dorchean"
  COLONIAL_Root_Culture_GetName_tonatiqan:0 "[Root.GetAdjective] Tonatiqan"
  COLONIAL_Root_Culture_GetName_tonatiqan_ADJ:0 "[Root.GetAdjective] Tonatiqani"
 
  colonial_panpallpa:0 "Colonial Panpallpa"
  COLONIAL_new_ifritica:0 "New Ifritica"
  COLONIAL_new_ifritica_ADJ:0 "Ifritican"
+ COLONIAL_cosgainimh:0 "Cosgainmh"
+ COLONIAL_cosgainimh_ADJ:0 "Cosgainimhian"
  COLONIAL_Root_Culture_GetName_panpallpa:0 "[Root.GetAdjective] Panpallpa"
  COLONIAL_Root_Culture_GetName_panpallpa_ADJ:0 "[Root.GetAdjective] Panpallpan"
 
@@ -24,6 +28,8 @@
  COLONIAL_new_verracia_ADJ:0 "New Verracian"
  COLONIAL_ziemia_edwardzka:0 "Ziemja Edwardzka"
  COLONIAL_ziemia_edwardzka_ADJ:0 "Edwardzkan"
+ COLONIAL_achicnatir:0 "Achicnatir"
+ COLONIAL_achicnatir_ADJ:0 "Achicnatiren"
  COLONIAL_Root_Culture_GetName_ardwajdi:0 "[Root.GetAdjective] Ardwajda"
  COLONIAL_Root_Culture_GetName_ardwajdi_ADJ:0 "[Root.GetAdjective] Ardwajdan"
 
@@ -38,6 +44,8 @@
  COLONIAL_alghaba_ADJ:0 "Alghabian"
  COLONIAL_koniginland:0 "Königinland"
  COLONIAL_koniginland_ADJ:0 "Königinlander"
+ COLONIAL_cuanta_mora:0 "Cuanta Móra"
+ COLONIAL_cuanta_mora_ADJ:0 "Cuantan"
  COLONIAL_Root_Culture_GetName_grossenseen:0 "[Root.GetAdjective] Grossenseen"
  COLONIAL_Root_Culture_GetName_grossenseen_ADJ:0 "[Root.GetAdjective] Grossenseeni"
 
@@ -74,6 +82,8 @@
  colonial_qarabil:0 "Colonial Qarabil"
  COLONIAL_arijanes:0 "Arijanes"
  COLONIAL_arijanes_ADJ:0 "Arijanesi"
+ COLONIAL_new_oileamer:0 "New Oileamer"
+ COLONIAL_new_oileamer_ADJ:0 "Oileamerian"
  COLONIAL_Root_Culture_GetName_qarabil:0 "[Root.GetAdjective] Qarabil"
  COLONIAL_Root_Culture_GetName_qarabil_ADJ:0 "[Root.GetAdjective] Qarabili"
 
@@ -82,6 +92,8 @@
  COLONIAL_terra_de_rios_ADJ:0 "Radoriasan"
  COLONIAL_fordland:0 "Fordland"
  COLONIAL_fordland_ADJ:0 "Fordland"
+ COLONIAL_talamhath:0 "Talamhath"
+ COLONIAL_talamhath_ADJ:0 "Talamhath"
  COLONIAL_Root_Culture_GetName_radoriasa:0 "[Root.GetAdjective] Radoriasa"
  COLONIAL_Root_Culture_GetName_radoriasa_ADJ:0 "[Root.GetAdjective] Radoriasan"
 
@@ -89,6 +101,8 @@
  COLONIAL_Root_Culture_GetName_secesa:0 "[Root.GetAdjective] Secesa"
  COLONIAL_Root_Culture_GetName_secesa_ADJ:0 "[Root.GetAdjective] Secesan"
  
- colonial_westcoast:0 "Colonial Blawenn"
- COLONIAL_Root_Culture_GetName_westcoast:0 "[Root.GetAdjective] Blawenn"
- COLONIAL_Root_Culture_GetName_westcoast_ADJ:0 "[Root.GetAdjective] Blawennian"
+ colonial_blawenn:0 "Colonial Blawenn"
+ COLONIAL_thiara:0 "Thiara"
+ COLONIAL_thiara_ADJ:0 "Thiaran"
+ COLONIAL_Root_Culture_GetName_blawenn:0 "[Root.GetAdjective] Blawenn"
+ COLONIAL_Root_Culture_GetName_blawenn_ADJ:0 "[Root.GetAdjective] Blawennian"
